mobile safari align issue fix

--- a/src/modules/app/less/footer.less
+++ b/src/modules/app/less/footer.less
@@ -20,6 +20,7 @@ footer {
 		display: none;
 		flex: 1;
 		justify-content: center;
+		align-self: center; // Mobile Safari bugfix
 
 		@media @breakpoint-1, @breakpoint-2-2 {
 			display: flex;
